# docython

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/docython/: __main__.py  exceptions.py
src/docython/analyzer/: InputChecker.py
